structure of html

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -8,7 +8,27 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
 </head>
 <body>
+    <form>
 
+        <input type="text"  id ="search" placeholder="Enter word" required>
+        <select required id="lang">
+            <option value="ar" >Arabic</option>
+            <option value="en">English</option>
+            <option value="fr">French</option>
+            <option value="he">Hebrew</option>
+          </select>
+          <select required id="cate">
+             <option value=" business">...</option>
+             <option value=" business">business</option>
+             <option value="health">health</option>
+             <option value="science">science</option>
+             <option value="sports">sports</option>
+          </select>
+
+
+
+
+    </form>
 
 
     
