--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,14 @@
 
         <input type="text"  id ="search" placeholder="Enter word" required>
         <select required id="lang">
+                <option value="">...</option>
             <option value="ar" >Arabic</option>
             <option value="en">English</option>
             <option value="fr">French</option>
             <option value="he">Hebrew</option>
           </select>
           <select required id="cate">
-             <option value=" business">...</option>
+             <option value="">...</option>
              <option value=" business">business</option>
              <option value="health">health</option>
              <option value="science">science</option>
