modify od sile show

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
       <a class="next" onclick="moveSlide(1)">&#10095;</a>
     <div id="indicator" class="indicator">
     </div>
-    <dialog class="dialog"></dialog>
+    <dialog class="dialog" id="dialog"></dialog>
 
       <script src="js/logic.js"></script>
       <script src="js/dom.js"></script>
