make test for logic

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
     </div>
     <dialog class="dialog" id="dialog"></dialog>
 
+      <script src="js/config.js"></script>
       <script src="js/logic.js"></script>
       <script src="js/dom.js"></script>
   </body>
