--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    
   <form class="searchForm">
 
         <input type="text"  id ="search" class="search" placeholder="Enter word" required>
@@ -36,6 +37,7 @@
     <div id="indicator" class="indicator">
     </div>
     <dialog class="dialog" id="dialog"></dialog>
+    <div class="sources" id="source_result"></div>
 
       <script src="js/config.js"></script>
       <script src="js/logic.js"></script>
