--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
              <option value="health">health</option>
              <option value="science">science</option>
              <option value="sports">sports</option>
+             <option value="technology">technology</option>
+             technology
           </select>
           <label for="submit"></label>
 
@@ -45,7 +47,6 @@
       
       <a class="prev" onclick="moveSlide(-1)">&#10094;</a>
       <a class="next" onclick="moveSlide(1)">&#10095;</a>
-      <div class="more_Detalis"><button class="btn_more_Detalis">more details</button></div>
     <div id="indicator" class="indicator">
     </div>
     <div class="clear"></div>
