--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,8 @@
     </div>
     <div class="sources" id="source_result"></div>
     <div class="clear"></div>
-    <dialog class="dialog" >
+
+    <dialog class="dialog" id="dialog">
       <div class="content">
           <div class="title">
               <h2 id="title">Web news</h2>
